k8s/calc-micro_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: calc-micro
spec:
  containers:
    - image: rabbitk8straining.azurecr.io/calc-micro:latest
      name: calc-micro
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "1000m"
          memory: "256Mi"
      livenessProbe:
        httpGet:
          path: /ping
          port: 80
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /ping
          port: 80
        initialDelaySeconds: 30
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
  imagePullSecrets:
    - name: regcred
