k8s/calc-micro_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calc-micro-ingress
  labels:
    name: calc-micro-ingress
spec:
  rules:
  - host: micromicroservice.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: calc-micro-service
            port: 
              number: 80
